For some reason, the click event is not occuring on mobile. Possible fix by adding the cursor property on i element and setting it to pointer

--- a/styles/main.css
+++ b/styles/main.css
@@ -80,6 +80,7 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 li:hover {
   cursor: pointer;
